--- a/views/report_plan_de_charge.xml
+++ b/views/report_plan_de_charge.xml
@@ -16,7 +16,7 @@
             }
 
             .contenu h1{
-                font-size:16pt;
+                font-size:15pt;
                 font-weight: bold;
                 text-align:center;
                 padding:0mm;
@@ -124,7 +124,12 @@
                                     <td style="width:20%" rowspan="1">FO-1-LOG-1</td>
                                 </tr>
                                 <tr>
-                                    <td style="width:60%" rowspan="2"><h1>Analyse du Plan de charge de production<br />de Plastigray ST-Brice</h1></td>
+                                    <td style="width:60%" rowspan="2">
+                                        <h1>
+                                            Analyse du Plan de charge de production<br />
+                                            de <span t-field="res_company.name"/> <span t-field="res_company.street"/>
+                                        </h1>
+                                    </td>
                                     <td style="width:20%" rowspan="1">Le <span t-field="o.name"/></td>
                                 </tr>
                                 <tr>
@@ -246,9 +251,14 @@
                                             <th style="width:20%;text-align:center"><b>% Presse au rendement de 85%</b></th>
                                         </tr>
                                         <t t-set="presse_heure"      t-value="0"/>
+                                        <t t-set="total_ouverture"   t-value="0"/>
                                         <tr t-foreach="o.workcenter_ids" t-as="l">
                                             <t t-if="l.workcenter_id.code  &lt; '9000'"> 
-                                                <t t-set="presse_heure" t-value="presse_heure+l.presse_heure"/>
+                                                <t t-set="presse_heure"    t-value="presse_heure+l.presse_heure"/>
+                                                <t t-set="total_ouverture" t-value="total_ouverture+o.temps_ouverture"/>
+
+                                                <!--<t t-set="test" t-value="100*l.presse_heure/o.temps_ouverture"/>-->
+
                                                 <td><span t-field="l.workcenter_id.code"/></td>
                                                 <td><t t-esc='"{:,.0f}".format(l.presse_heure).replace(","," ").replace(".",",")'      /></td>
                                                 <td><t t-esc='"{:,.0f}".format(l.presse_pourcent).replace(","," ").replace(".",",")'    /> %</td>
@@ -258,10 +268,10 @@
                                         </tr>
                                         <tr>
                                             <td><b>Total : </b></td>
-                                            <td><b><t t-esc='"{:,.0f}".format(presse_heure).replace(","," ").replace(".",",")'      /></b></td>
-                                            <td></td>
+                                            <td><b><t t-esc='"{:,.0f}".format(presse_heure).replace(","," ").replace(".",",")'          /></b></td>
+                                            <td><b><t t-esc='"{:,.0f}".format(100*presse_heure/total_ouverture).replace(".",",")'      /> %</b></td>
                                             <td><b><t t-esc='"{:,.0f}".format(presse_heure/0.85).replace(","," ").replace(".",",")'    /></b></td>
-                                            <td></td>
+                                            <td><b><t t-esc='"{:,.0f}".format(100*presse_heure/total_ouverture/0.85).replace(".",",")'      /> %</b></td>
                                         </tr>
                                    </table><br />
 
@@ -309,7 +319,12 @@
                                     <td style="width:20%" rowspan="1">FO-1-LOG-1</td>
                                 </tr>
                                 <tr>
-                                    <td style="width:60%" rowspan="2"><h1>Analyse du Plan de charge de production<br />de Plastigray ST-Brice</h1></td>
+                                    <td style="width:60%" rowspan="2">
+                                        <h1>
+                                            Analyse du Plan de charge de production<br />
+                                            de <span t-field="res_company.name"/> <span t-field="res_company.street"/>
+                                        </h1>
+                                    </td>
                                     <td style="width:20%" rowspan="1">Le <span t-field="o.name"/></td>
                                 </tr>
                                 <tr>
