--- a/views/report_is_consigne_journaliere.xml
+++ b/views/report_is_consigne_journaliere.xml
@@ -132,11 +132,11 @@
                     <div class="row">
                         <div class="col-xs-4">
                             <table style="width:100%">
-                                <tr><th class="text-right">Titre :                </th><td><span t-field="o.name"/></td></tr>
-                                <tr><th class="text-right">Chef d'atelier :       </th><td><span t-field="o.chef_atelier"/></td></tr>
-                                <tr><th class="text-right">Remarque générale :    </th><td><span t-field="o.remarque_generale"/></td></tr>
-                                <tr><th class="text-right">Total MOD Injection :  </th><td><span t-field="o.total_mod_inj"/></td></tr>
-                                <tr><th class="text-right">Total MOD Assemblage : </th><td><span t-field="o.total_mod_ass"/></td></tr>
+                                <tr><th class="text-right">Titre                </th><td><span t-field="o.name"/></td></tr>
+                                <tr><th class="text-right">Chef d'atelier       </th><td><span t-field="o.chef_atelier"/></td></tr>
+                                <tr><th class="text-right">Remarque générale    </th><td><span t-field="o.remarque_generale"/></td></tr>
+                                <tr><th class="text-right">Total MOD Injection  </th><td><span t-field="o.total_mod_inj"/></td></tr>
+                                <tr><th class="text-right">Total MOD Assemblage </th><td><span t-field="o.total_mod_ass"/></td></tr>
                             </table>
                         </div>
                     </div><br />
@@ -162,15 +162,15 @@
                                 </thead>
                                 <tbody>
                                     <tr t-foreach="o.injection_ids" t-as="l">
-                                        <td class="text-center">    <span t-field="l.presse"/> </td>
-                                        <td class="text-center">    <span t-field="l.numof1_id.name"/> </td>
+                                        <td class="text-center">    <span t-field="l.presse_id"/> </td>
+                                        <td class="text-center">    <span t-field="l.of1_id.name"/> </td>
                                         <td class="text-center">    <span t-field="l.mod1"/> </td>
                                         <td class="text-center">    <span t-field="l.operateur"/> </td>
                                         <td class="text-center">    <span t-field="l.moule1"/> </td>
                                         <td class="text-center">    <span t-field="l.matiere1"/> </td>
                                         <td class="text-center">    <span t-field="l.tps_arret"/> </td>
                                         <td class="text-center">    <span t-field="l.heure"/> </td>
-                                        <td class="text-center">    <span t-field="l.numof2_id.name"/> </td>
+                                        <td class="text-center">    <span t-field="l.of2_id.name"/> </td>
                                         <td class="text-center">    <span t-field="l.mod2"/> </td>
                                         <td class="text-center">    <span t-field="l.moule2"/> </td>
                                         <td class="text-center">    <span t-field="l.matiere2"/> </td>
@@ -190,11 +190,11 @@
                         <div class="row">
                             <div class="col-xs-4">
                                 <table style="width:100%">
-                                    <tr><th class="text-right">Titre :                </th><td><span t-field="o.name"/></td></tr>
-                                    <tr><th class="text-right">Chef d'atelier :       </th><td><span t-field="o.chef_atelier"/></td></tr>
-                                    <tr><th class="text-right">Remarque générale :    </th><td><span t-field="o.remarque_generale"/></td></tr>
-                                    <tr><th class="text-right">Total MOD Injection :  </th><td><span t-field="o.total_mod_inj"/></td></tr>
-                                    <tr><th class="text-right">Total MOD Assemblage : </th><td><span t-field="o.total_mod_ass"/></td></tr>
+                                    <tr><th class="text-right">Titre                </th><td><span t-field="o.name"/></td></tr>
+                                    <tr><th class="text-right">Chef d'atelier       </th><td><span t-field="o.chef_atelier"/></td></tr>
+                                    <tr><th class="text-right">Remarque générale    </th><td><span t-field="o.remarque_generale"/></td></tr>
+                                    <tr><th class="text-right">Total MOD Injection  </th><td><span t-field="o.total_mod_inj"/></td></tr>
+                                    <tr><th class="text-right">Total MOD Assemblage </th><td><span t-field="o.total_mod_ass"/></td></tr>
                                 </table>
                             </div>
                         </div><br />
@@ -214,12 +214,12 @@
                                     </thead>
                                     <tbody>
                                         <tr t-foreach="o.assemblage_ids" t-as="l">
-                                            <td class="text-center">    <span t-field="l.poste"/> </td>
+                                            <td class="text-center">    <span t-field="l.poste_id"/> </td>
                                             <td class="text-center">    <span t-field="l.priorite"/> </td>
                                             <td class="text-center">    <span t-field="l.mod"/> </td>
                                             <td class="text-center">    <span t-field="l.operateur"/> </td>
-                                            <td class="text-center">    <span t-field="l.of_en_cours_id.name"/> </td>
-                                            <td class="text-center">    <span t-field="l.of_suivant_id.name"/> </td>
+                                            <td class="text-center">    <span t-field="l.of1_id.name"/> </td>
+                                            <td class="text-center">    <span t-field="l.of2_id.name"/> </td>
                                             <td class="text-center">    <span t-field="l.remarque"/> </td>
                                         </tr>
                                     </tbody>
