--- a/views/report_purchaseorder.xml
+++ b/views/report_purchaseorder.xml
@@ -76,7 +76,9 @@
             <div class="col-xs-4  text-left">
                 <img t-if="company.is_logo" t-att-src="'data:image/png;base64,%s' % company.is_logo" style="max-height: 60px;"/>
                 <div class="livraison">
-                    Adresse de livraison : <br />
+                    <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de livraison : </span>
+                    <span t-if="o.partner_id.lang != 'fr_FR'">Delevery Address : </span>
+                    <br />
                     <t t-if="not o.is_livre_a_id">
                         <span t-field="company.name"/> <span t-field="company.street"/><br />
                         <span t-field="company.street2"/><br />
@@ -89,7 +91,9 @@
                     </t>
                 </div>
                 <div class="facturation">
-                    Adrese de facturation : PLASTIGRAY SAS <br />
+                    <span t-if="o.partner_id.lang == 'fr_FR'">Adresse de facturation : </span>
+                    <span t-if="o.partner_id.lang != 'fr_FR'">Invoicing Address : </span>
+                    PLASTIGRAY SAS <br />
                     ZAC de Gray Sud CS 10133 <br />
                     70104 GRAY Cedex
                 </div>
@@ -97,9 +101,12 @@
             <div class="col-xs-1" />
             <div class="col-xs-7">
                 <div class="titre">
-                    <span>Commande ferme N°</span>
+                    <span t-if="o.partner_id.lang == 'fr_FR'">Commande ferme N°</span>
+                    <span t-if="o.partner_id.lang != 'fr_FR'">Order N°</span>
                     <span style="font-size:12pt;" t-field="o.name"/>
-                     du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H<br />
+                    <span t-if="o.partner_id.lang == 'fr_FR'">du <t t-usertime="%d/%m/%Y"/> à <t t-usertime="%H"/>H</span>
+                    <span t-if="o.partner_id.lang != 'fr_FR'"> <t t-usertime="%d/%m/%Y"/> <t t-usertime="%H"/>H</span>
+                    <br />
                 </div>
                 <div class="fournisseur">
                     <b><span t-field="o.partner_id.name"/></b> (<span t-field="o.partner_id.is_code"/>)
@@ -114,9 +121,13 @@
                     Contact : <b><span t-field="o.is_demandeur_id.name"/> / <span t-field="o.is_demandeur_id.partner_id.email"/> </b><br />
                 </t>
                 <i>
-                Conditions de paiement :  <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
-                Type de réglement :       <span t-field="o.partner_id.is_type_reglement.name"/> <br />
-                Incoterm :                <span t-field="o.partner_id.is_incoterm.name"/> <br />
+                <span t-if="o.partner_id.lang == 'fr_FR'">Conditions de paiement : </span>
+                <span t-if="o.partner_id.lang != 'fr_FR'">Conditions of payment : </span>
+                <span t-field="o.partner_id.property_supplier_payment_term.name"/> <br />
+                <span t-if="o.partner_id.lang == 'fr_FR'">Type de réglement : </span>
+                <span t-if="o.partner_id.lang != 'fr_FR'">Type of payment : </span>
+                <span t-field="o.partner_id.is_type_reglement.name"/> <br />
+                Incoterm : <span t-field="o.partner_id.is_incoterm.name"/> <br />
                 </i>
             </div>
         </div>
@@ -132,8 +143,17 @@
             <table style="width:100%">
                 <tr>
                     <td class="text-left" style="width:90%">
-                        <b>En cas de désaccord ou de contradiction se référer à la commande ouverte, 
-                        contrat cadre, cahier des charges et / ou conditions Générales d'Achats.</b><br />
+                        <b>
+                            <span t-if="o.partner_id.lang == 'fr_FR'">
+                                En cas de désaccord ou de contradiction se référer à la commande ouverte, 
+                                contrat cadre, cahier des charges et / ou conditions Générales d'Achats.
+                            </span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">
+                                In case of disagreement, refer to open order, frame contract, requirements
+                                specification and/or generale conditions of purchase.
+                            </span>
+                        </b>
+                        <br />
                         PLASTIGRAY - S.A.S. au capital de 2 102 400 € - Siège social : ZAC de Gray Sud CS 10133 70104 GRAY Cedex<br />
                         Siret B 377 846 381 00020 - Code NAF 2229 A - Registre du Commerce GRAY - N°Identification T.V.A. FR 65 377 846 381<br />
                     </td>
@@ -171,16 +191,43 @@
             <table class="table table-condensed">
                 <thead>
                     <tr >
-                        <th class="text-left"   style="vertical-align:top">Article / Désignation</th>
-                        <th class="text-left"   style="vertical-align:top">Référence<br />fournisseur</th>
-                        <th class="text-left"   style="vertical-align:top">Plan</th>
-                        <th class="text-left"   style="vertical-align:top">TVA</th>
-                        <th class="text-center" style="vertical-align:top">Date prévue</th>
-                        <th class="text-right"  style="vertical-align:top">Quantité</th>
-                        <th class="text-left"   style="vertical-align:top">Unité</th>
-                        <th class="text-right"  style="vertical-align:top">Prix d'achat<br />€ HT</th>
-                        <th class="text-right"  style="vertical-align:top">Prix total<br />€ HT</th>
+                        <th class="text-left"   style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Article / Désignation</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Part Number / Description</span>
+                        </th>
+                        <th class="text-left"   style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Référence<br />fournisseur</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Part Number<br />supplier</span>
+                        </th>
+                        <th class="text-left"   style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Plan</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Plan</span>
+                        </th>
+                        <th class="text-left"   style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">TVA</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">VAT</span>
 
+                        </th>
+                        <th class="text-center" style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Date prévue</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Due Date</span>
+                        </th>
+                        <th class="text-right"  style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Quantité</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Quantity</span>
+                        </th>
+                        <th class="text-left"   style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Unité</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Unit</span>
+                        </th>
+                        <th class="text-right"  style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Prix d'achat HT</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Purchase Price</span>
+                        </th>
+                        <th class="text-right"  style="vertical-align:top">
+                            <span t-if="o.partner_id.lang == 'fr_FR'">Prix total HT</span>
+                            <span t-if="o.partner_id.lang != 'fr_FR'">Total Value</span>
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -205,21 +252,30 @@
                 <div class="col-xs-4 pull-right">
                     <table class="table table-condensed">
                         <tr class="border-black">
-                            <td><strong>Total HT</strong></td>
+                            <td>
+                                <span t-if="o.partner_id.lang == 'fr_FR'"><strong>Total HT</strong></span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'"><strong>Total VAT excluded</strong></span>
+                            </td>
                             <td class="text-right">
                                 <span t-field="o.amount_untaxed"
                                     t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                         <tr>
-                            <td>Taxes</td>
+                            <td>
+                                <span t-if="o.partner_id.lang == 'fr_FR'">Taxes</span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'">VAT</span>
+                            </td>
                             <td class="text-right">
                                 <span t-field="o.amount_tax"
                                     t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
                             </td>
                         </tr>
                         <tr class="border-black">
-                            <td><strong>Total TTC</strong></td>
+                            <td>
+                                <span t-if="o.partner_id.lang == 'fr_FR'"><strong>Total TTC</strong></span>
+                                <span t-if="o.partner_id.lang != 'fr_FR'"><strong>Total VAT included</strong></span>
+                            </td>
                             <td class="text-right">
                                 <span t-field="o.amount_total"
                                     t-field-options='{"widget": "monetary", "display_currency": "o.currency_id"}'/>
